<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="@dimen/zero"
                    android:layout_height="wrap_content"
                    android:layout_weight="@dimen/one"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-medium"
                        android:gravity="center_horizontal"
                        android:padding="@dimen/pad"
                        android:text="@string/m"
                        android:textColor="@color/colorA"
                        android:textSize="@dimen/scale" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:padding="@dimen/pad"
                        android:scaleType="center"
                        android:src="@drawable/two" />

                    <TextView
                        android:id="@+id/team_marines_runs"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/pad"
                        android:fontFamily="sans-serif-light"
                        android:gravity="center_horizontal"
                        android:text="@string/zero"
                        android:textColor="@color/colorB"
                        android:textSize="@dimen/scaleB" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="addPointForRunsOfTeamMarines"
                        android:text="@string/R" />

                    <TextView
                        android:id="@+id/team_marines_outs"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/pad"
                        android:fontFamily="sans-serif-light"
                        android:gravity="center_horizontal"
                        android:text="@string/zero"
                        android:textColor="@color/colorB"
                        android:textSize="@dimen/scaleB" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="addPointForOutsOfTeamMarines"
                        android:text="@string/O" />

                </LinearLayout>

                <View
                    android:layout_width="@dimen/oned"
                    android:layout_height="match_parent"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/pad"
                    android:background="@color/colorb" />

                <LinearLayout
                    android:layout_width="@dimen/zero"
                    android:layout_height="wrap_content"
                    android:layout_weight="@dimen/one"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-medium"
                        android:gravity="center_horizontal"
                        android:padding="@dimen/pad"
                        android:text="@string/t"
                        android:textColor="@color/colorA"
                        android:textSize="@dimen/scale" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:padding="@dimen/pad"
                        android:scaleType="center"
                        android:src="@drawable/tra" />

                    <TextView
                        android:id="@+id/team_travers_runs"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/pad"
                        android:fontFamily="sans-serif-light"
                        android:gravity="center_horizontal"
                        android:text="@string/z"
                        android:textColor="@color/colorB"
                        android:textSize="@dimen/scaleB" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="addPointForRunsOfTeamTravers"
                        android:text="@string/R" />

                    <TextView
                        android:id="@+id/team_travers_outs"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/pad"
                        android:fontFamily="sans-serif-light"
                        android:gravity="center_horizontal"
                        android:text="@string/zero"
                        android:textColor="@color/colorB"
                        android:textSize="@dimen/scaleB" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="addPointForOutsOfTeamTravers"
                        android:text="@string/O" />

                </LinearLayout>
            </LinearLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/scaleR"
                android:onClick="Reset"
                android:text="@string/r" />

        </RelativeLayout>
    </LinearLayout>
</ScrollView>